# dagger_orchestrater

./: .gitignore  LICENSE  README.md  dagger.json  install_dagger.sh 
.github/workflows/: lint-and-test.yml
dagger/: pyproject.toml
dagger/src/: __init__.py  main.py
dagger/src/config/: loader.py
dagger/src/helpers/: helper.py
dagger/src/main/: __init__.py
dagger/src/main/modules/terraform/: terraform.py
dagger/src/models/: ansible.py  deploy.py  helm.py  kubectl.py  model.py  orchestrate.py  secret.py  terraform.py
dagger/src/modules/ansible/: ansible.py
dagger/src/modules/helm/: helm.py
dagger/src/modules/kubectl/: kubectl.py
dagger/src/modules/terraform/: terraform.py
dagger/src/secrets/: handler.py
dagger/tests/: conftest.py  test_dagger_deploy_model.py
stage_files/: dagger_deploy.yaml
wip/: first_terraform.py  hmpf.txt
